--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: techtrends:latest
+          tags: user/techtrends:latest
