--- a/helm/values.yml
+++ b/helm/values.yml
@@ -8,7 +8,7 @@ service:
   type: ClusterIP
 
 image:
-  repository: techtrends 
+  repository: pkgltn/TechTrends 
   tag: latest
   pullPolicy: IfNotPresent
 
