--- a/helm/templates/deploy.yml
+++ b/helm/templates/deploy.yml
@@ -39,7 +39,7 @@ spec:
         ## Set the image to be executed inside the container and image pull policy
         ## In this case, run the `go-helloworld` application in version v2.0.0 and
         ## only pull the image if it's not available on the current host.
-      - image: techtrends:{{ .Values.image.tag }}
+      - image: {{ .Values.image.dockerRegistry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: techtrends
         ## Expose the port the container is listening on.
