--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -39,7 +39,7 @@ spec:
         ## Set the image to be executed inside the container and image pull policy
         ## In this case, run the `go-helloworld` application in version v2.0.0 and
         ## only pull the image if it's not available on the current host.
-      - image: techtrends:latest
+      - image: priyangeentilal28/techtrends:latest
         imagePullPolicy: IfNotPresent
         name: techtrends
         ## Expose the port the container is listening on.
